cluster/apps/wiki/wiki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki
      app.kubernetes.io/component: wiki
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiki
        app.kubernetes.io/component: wiki
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: wiki
          image: requarks/wiki:2.5.315
          ports:
            - name: http
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 90
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 2
            timeoutSeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            timeoutSeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      restartPolicy: Always
      automountServiceAccountToken: false
