cluster/apps/wiki/wiki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: wiki
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/component: wiki
