cluster/apps/wiki/wiki/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wiki
  namespace: wiki
  annotations:
    cloudflare-operator.io/type: CNAME
    cloudflare-operator.io/content: ${BASE_DOMAIN}
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - wiki.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: wiki
          port: 3000
