cluster/apps/wiki/wiki/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki
  namespace: wiki
  annotations:
    cloudflare-operator.io/type: CNAME
    cloudflare-operator.io/content: ${BASE_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
    - host: wiki.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wiki
                port:
                  name: http
